Add a help msg for url uploads

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -281,3 +281,5 @@ intranda_workflow_processinspection=Pr\u00FCf-Ansicht
 plugin_workflow_processinspection_image=Erste Seite
 plugin_workflow_processinspection_fulltext=Textanfang
 plugin_dashboard_delivery_uploadFormBtn=W\u00E4hlen Sie eine Datei aus
+
+plugin_dashboard_delivery_urlUploadForm_helpMsg=Tragen Sie hier eine URL ein, die dem Schema 'https://www.abc.de' entspricht.
