Accessibility: fix contrast issues in buttons

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -283,3 +283,4 @@ plugin_workflow_processinspection_fulltext=Textanfang
 plugin_dashboard_delivery_uploadFormBtn=W\u00E4hlen Sie eine Datei aus
 
 plugin_dashboard_delivery_urlUploadForm_helpMsg=Tragen Sie hier eine URL ein, die dem Schema 'https://www.abc.de' entspricht.
+plugin_dashboard_delivery_uploadFormBtn_urlUpload=Geben Sie eine URL an
