--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -284,3 +284,4 @@ plugin_dashboard_delivery_uploadFormBtn=W\u00E4hlen Sie eine Datei aus
 
 plugin_dashboard_delivery_urlUploadForm_helpMsg=Tragen Sie hier eine URL ein, die dem Schema 'https://www.abc.de' entspricht.
 plugin_dashboard_delivery_uploadFormBtn_urlUpload=Geben Sie eine URL an
+plugin_dashboard_delivery_error_urlDownloadNotPossible=Download ist nicht m\u00F6glich, da der Dateiname nicht erkannt wird. Bitte sicherstellen, dass die HTTP Header 'Content-Disposition' oder 'Content-Type' gesetzt sind. 
