--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -287,3 +287,11 @@ plugin_dashboard_delivery_uploadFormBtn_urlUpload=Geben Sie eine URL an
 plugin_dashboard_delivery_error_urlDownloadNotPossible=Download ist nicht m\u00F6glich, da der Dateiname nicht erkannt wird. Bitte sicherstellen, dass die HTTP Header 'Content-Disposition' oder 'Content-Type' gesetzt sind. 
 
 plugin_dashboard_delivery_info_incompleteUserData=Bitte vervollst\u00E4ndigen Sie Ihre Nutzerdaten.
+
+plugin_rest_usercreation_new_account_notSelected=(nicht ausgew\u00E4hlt)
+plugin_dashboard_delivery_template_title=ZLB | E-Plicht
+
+plugin_rest_usercreation_new_account_institutionNamePlaceholder=Name der Einrichtung
+
+
+plugin_rest_usercreation_new_account_placeholder_streetNumber=Hausnummer
