translate values in dropdown and radio button

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -294,5 +294,5 @@ plugin_dashboard_delivery_template_title=ZLB | E-Plicht
 
 plugin_rest_usercreation_new_account_institutionNamePlaceholder=Name der Einrichtung
 
-
 plugin_rest_usercreation_new_account_placeholder_streetNumber=Hausnummer
+plugin_rest_usercreation_new_account_placeholder_accountName=
