--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -291,8 +291,10 @@ plugin_dashboard_delivery_info_incompleteUserData=Bitte vervollst\u00E4ndigen Si
 plugin_rest_usercreation_header_help=Hilfe
 plugin_rest_usercreation_new_account_notSelected=(nicht ausgew\u00E4hlt)
 plugin_dashboard_delivery_template_title=ZLB | E-Plicht
+plugin_administration_deliveryManagement_openInsititution=Einrichtung anzeigen
+
 
 plugin_rest_usercreation_new_account_institutionNamePlaceholder=Name der Einrichtung
 
 plugin_rest_usercreation_new_account_placeholder_streetNumber=Hausnummer
-plugin_rest_usercreation_new_account_placeholder_accountName=
+plugin_rest_usercreation_new_account_placeholder_accountName=Benutzername
