--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -297,3 +297,4 @@ plugin_rest_usercreation_new_account_placeholder_accountName=Benutzername
 plugin_dashboard_delivery_deliverLogout=Hier können Sie sich ausloggen
 plugin_dashboard_delivery_deliverLogoutButton=Ausloggen
 plugin_dashboard_delivery_deliverLogoutHeader=Ausloggen
+plugin_administration_deliveryManagement_accountStatus=Status
