some new messages

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -1,15 +1,25 @@
 intranda_administration_deliveryManagement=Verwaltung von Abliefernden
-plugin_administration_deliveryManagement_numberOfUploads=Anzahl Lieferungen
+plugin_administration_deliveryManagement_name=Name
+plugin_administration_deliveryManagement_intitution=Einrichtung
+plugin_administration_deliveryManagement_numberOfUploads=Lieferungen
+plugin_administration_deliveryManagement_status=Status
 plugin_administration_deliveryManagement_displayImports=Letzte Lieferungen
-plugin_administration_deliveryManagement_lastChangeDate=Datum der letzten Lieferung
+plugin_administration_deliveryManagement_lastChangeDate=Letzte Lieferung
 plugin_administration_deliveryManagement_uploadFile=XML-Datei hochladen
 plugin_administration_deliveryManagement_uploadInstitutionData=Stammdaten importieren
 plugin_administration_deliveryManagement_downloadInstitutionData=Stammdaten exportieren
 plugin_administration_deliveryManagement_displayMode_institution=Einrichtungen
 plugin_administration_deliveryManagement_displayMode_privacyPolicy=Datenschutzerkl\u00E4rung
 plugin_administration_deliveryManagement_displayMode_user=Benutzer
+plugin_administration_deliveryManagement_displayMode_user_status_registered=Registriert
+plugin_administration_deliveryManagement_displayMode_user_status_active=Aktiv
+plugin_administration_deliveryManagement_displayMode_user_status_inactive=Inaktiv
+plugin_administration_deliveryManagement_displayMode_user_status_rejected=Abgelehnt
+plugin_administration_deliveryManagement_displayMode_user_status_deleted=Gel\u00F6scht
 plugin_administration_deliveryManagement_displayMode_zdbTitleData=ZDB Titeldaten
 plugin_administration_deliveryManagement_includeFinishedZdbData=Registrierte ZDB Titeldaten anzeigen
+plugin_administration_deliveryManagement_backToList=Zur\u00FCck zur \u00DCbersicht
+plugin_administration_deliveryManagement_details=Details
 process_grid_Abstract=Zusammenfassung
 process_grid_AccessLicense=Zugriffsberechtigung
 process_grid_ActionNote=Maﬂname
@@ -47,8 +57,8 @@ process_grid_EAN=GTIN/EAN
 process_grid_OrderNumber=Best.-Nr.
 process_grid_Handle=Handle
 process_grid_Identifikation=Eindeutige Identifikation
-plugin_administration_deliveryManagement_showOnlyInactiveUser=Nur unregistrierte Nutzer anzeigen
-plugin_administration_delivery_configurationFileNotWritable=Die Konfigurationsdatei ist nicht schreibbar, daher steht die Funktion zur Bearbeitung der Datenschutzerkl\u00E4rung nicht zur verf\u00FCgung.
+plugin_administration_deliveryManagement_showAllUsers=Alle Nutzer anzeigen
+plugin_administration_delivery_configurationFileNotWritable=Es liegen keine Schreibrechte f\u00FCr die Konfigurationsdatei vor. Daher steht die Funktion zur Bearbeitung der Datenschutzerkl\u00E4rung nicht zur Verf\u00FCgung.
 plugin_dashboard_delivery_anyField=Beliebiges Feld
 plugin_dashboard_delivery_ariaLabel_uploadForm=Laden Sie hier Ihre Dokumente hoch
 plugin_dashboard_delivery_data1=Daten eingeben I
