--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -288,9 +288,11 @@ plugin_dashboard_delivery_existingData_contact_helpBody1=Hilfetext \u00DCber dem
 plugin_dashboard_delivery_existingData_helpBody2=Hilfetext unter dem Bild
 plugin_dashboard_delivery_existingData_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
 
+plugin_workflow_processinspection_executeChance=Änderungen ausführen
+plugin_workflow_processinspection_searchterm=Suchbegriff
 intranda_workflow_processinspection=Pr\u00FCf-Ansicht
-plugin_workflow_processinspection_image=Erste Seite
-plugin_workflow_processinspection_fulltext=Textanfang
+plugin_workflow_processinspection_image=Vorschau
+plugin_workflow_processinspection_fulltext=Volltextauszug
 plugin_dashboard_delivery_uploadFormBtn=W\u00E4hlen Sie eine Datei aus
 
 plugin_dashboard_delivery_urlUploadForm_helpMsg=Tragen Sie hier eine URL ein, die dem Schema 'https://www.abc.de' entspricht.
@@ -306,4 +308,4 @@ plugin_dashboard_delivery_template_title=ZLB | E-Plicht
 plugin_rest_usercreation_new_account_institutionNamePlaceholder=Name der Einrichtung
 
 plugin_rest_usercreation_new_account_placeholder_streetNumber=Hausnummer
-plugin_rest_usercreation_new_account_placeholder_accountName=
+plugin_rest_usercreation_new_account_placeholder_accountName=Name des Accounts
