--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -123,6 +123,9 @@ plugin_rest_usercreation_helpText_password=Bitte w\u00E4hlen Sie ein Passwort, d
 plugin_rest_usercreation_helpText_privacy=Bitte best\u00E4tigen Sie auch unsere Datenschutzerkl\u00E4rung nach Kenntnisnahme.
 plugin_rest_usercreation_helpText_userName=Ihr Anmeldename muss zwischen 2 und 64 Zeichen lang sein und darf nur Kleinbuchstaben (a-z), Unterstriche und Ziffern (0-9) enthalten, z.B.: institution_epflicht
 plugin_rest_usercreation_helpText_userName=Ihr Anmeldename muss zwischen 2 und 64 Zeichen lang sein und darf nur Kleinbuchstaben (a-z), Unterstriche und Ziffern (0-9) enthalten, z.B.: institution_epflicht
+
+plugin_rest_usercreation_helpText_page=Hilfe zu dieser Seite anzeigen
+
 plugin_rest_usercreation_helpTitle_privacy=Zustimmung zur Datenschutzerkl\u00E4rung
 plugin_rest_usercreation_new_account=Account erstellen
 plugin_rest_usercreation_new_account_activation=Hiermit beantrage ich die Freischaltung zur Ablieferung digitaler Pflichtpublikationen
