Dashboard: change sign out item copy; refs #23714

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -312,3 +312,8 @@ plugin_rest_usercreation_new_account_institutionNamePlaceholder=Name der Einrich
 
 plugin_rest_usercreation_new_account_placeholder_streetNumber=Hausnummer
 plugin_rest_usercreation_new_account_placeholder_accountName=Name des Accounts
+
+
+plugin_dashboard_delivery_deliverLogoutHeader=Abmelden
+plugin_dashboard_delivery_deliverLogout=Hier k\u00F6nnen Sie sich abmelden
+plugin_dashboard_delivery_deliverLogoutButton=Abmelden
