Monograph upload: change info text; refs #23716

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -101,7 +101,7 @@ plugin_dashboard_delivery_pageHelp=Hilfe zu dieser Seite anzeigen
 plugin_dashboard_delivery_upload=Upload
 plugin_dashboard_delivery_uploadFormHeader=Bitte laden Sie Ihre Dokumente hier hoch
 plugin_dashboard_delivery_uploadFormLabel=W\u00E4hlen Sie eine Datei aus
-plugin_dashboard_delivery_uploadFormMessage=Ziehen Sie Dokumente, Bilder oder Datens\u00E4tze auf dieses Feld
+plugin_dashboard_delivery_uploadFormMessage=Ziehen eine Mongrafie auf dieses Feld
 plugin_dashboard_delivery_wellcomeMessage=Hallo {0}, Sie haben folgende Auswahlm\u00F6glichkeiten:
 plugin_rest_usercreation_ariaLabel_elementDuplicate=F\u00FCgen Sie ein weiteres Formelement vom gleichen Typ hinzu
 plugin_rest_usercreation_ariaLabel_elementHelp=Hilfe zu diesem Element anzeigen
