Contact person: fix messages, styles, alignments; refs #23715

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -64,8 +64,8 @@ plugin_dashboard_delivery_ariaLabel_uploadForm=Laden Sie hier Ihre Dokumente hoc
 plugin_dashboard_delivery_data1=Daten eingeben I
 plugin_dashboard_delivery_data2=Daten eingeben II
 plugin_dashboard_delivery_data3=Daten eingeben III
-plugin_dashboard_delivery_deliverContactPersonData=Kontaktperson verwalten
-plugin_dashboard_delivery_deliverContactPersonDataButton=Kontaktperson verwalten
+plugin_dashboard_delivery_deliverContactPersonData=Kontaktpersonen verwalten
+plugin_dashboard_delivery_deliverContactPersonDataButton=Kontaktpersonen verwalten
 plugin_dashboard_delivery_deliverContactPersonDataTitle=sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 plugin_dashboard_delivery_deliverHelp=Lernen Sie das E-Pflicht System der ZLB kennen, bevor Sie Publikationen hochladen
 plugin_dashboard_delivery_deliverHelpButton=Hilfethemen ansehen
@@ -317,3 +317,4 @@ plugin_rest_usercreation_new_account_placeholder_accountName=Name des Accounts
 plugin_dashboard_delivery_deliverLogoutHeader=Abmelden
 plugin_dashboard_delivery_deliverLogout=Hier k\u00F6nnen Sie sich abmelden
 plugin_dashboard_delivery_deliverLogoutButton=Abmelden
+plugin_dashboard_delivery_contactPerson=Kontaktperson
