Title: fix typo; refs #23711

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -306,7 +306,7 @@ plugin_dashboard_delivery_info_incompleteUserData=Bitte vervollst\u00E4ndigen Si
 
 plugin_rest_usercreation_header_help=Hilfe
 plugin_rest_usercreation_new_account_notSelected=(nicht ausgew\u00E4hlt)
-plugin_dashboard_delivery_template_title=ZLB | E-Plicht
+plugin_dashboard_delivery_template_title=ZLB | E-Pflicht
 
 plugin_rest_usercreation_new_account_institutionNamePlaceholder=Name der Einrichtung
 
