new message key

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -315,3 +315,5 @@ plugin_dashboard_delivery_deliverLogoutHeader=Abmelden
 plugin_dashboard_delivery_deliverLogout=Hier k\u00F6nnen Sie sich abmelden
 plugin_dashboard_delivery_deliverLogoutButton=Abmelden
 plugin_dashboard_delivery_contactPerson=Kontaktperson
+
+plugin_dashboard_delivery_deliverNoJournalTitles=Diese Funktionalit\u00E4t steht erst zur Verf\u00FCgung, wenn mindestens ein Titel erfasst wurde.
