--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -317,3 +317,5 @@ plugin_dashboard_delivery_deliverLogoutButton=Abmelden
 plugin_dashboard_delivery_contactPerson=Kontaktperson
 
 plugin_dashboard_delivery_deliverNoJournalTitles=Diese Funktionalit\u00E4t steht erst zur Verf\u00FCgung, wenn mindestens ein Titel erfasst wurde.
+plugin_dashboard_delivery_backToDashboard=Zur\u00FCck zum Dashboard
+plugin_dashboard_delivery_creationSuccessful=Die Datenlieferung war erfolgreich.
