--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -22,14 +22,14 @@ plugin_administration_deliveryManagement_backToList=Zur\u00FCck zur \u00DCbersic
 plugin_administration_deliveryManagement_details=Details
 process_grid_Abstract=Zusammenfassung
 process_grid_AccessLicense=Zugriffsberechtigung
-process_grid_ActionNote=Maßname
+process_grid_ActionNote=MaÃŸname
 process_grid_CatalogIDPeriodicalDB=ZDB ID
 process_grid_ContentType=Inhaltstyp
 process_grid_Copyright=Copyright
 process_grid_CorporateContributor=Sonstige K\u00F6rperschaft
 process_grid_DDC=Sachgruppe
 process_grid_DOI=DOI
-process_grid_DataMediumType=Datenträgertyp
+process_grid_DataMediumType=DatentrÃ¤gertyp
 process_grid_DigitalOrigin=Vorlageinformation
 process_grid_DocLanguage=Sprache
 process_grid_ISIL=Bibliothek (ISIL)
@@ -82,10 +82,10 @@ plugin_dashboard_delivery_deliverMonographHeader=Monografie hochladen
 plugin_dashboard_delivery_deliverNewIssueTitle=Hier kann eine Ausgabe zu einem existierenden Titel hinzugef\u00FCgt werden.
 plugin_dashboard_delivery_deliverNewIssueTitleButton=Ausgabe hinzuf\u00FCgen
 plugin_dashboard_delivery_deliverNewJournalIssueHeader=Ausgabe hinzuf\u00FCgen
-plugin_dashboard_delivery_deliverNewJournalTitle=Hier kann ein neuer Zeitschriftentitel erfasst werden. Der Titel muss angelegt werden, bevor einzelne Jahrg\u00E4nge oder Hefte importiert werden können.
+plugin_dashboard_delivery_deliverNewJournalTitle=Hier kann ein neuer Zeitschriftentitel erfasst werden. Der Titel muss angelegt werden, bevor einzelne Jahrg\u00E4nge oder Hefte importiert werden kÃ¶nnen.
 plugin_dashboard_delivery_deliverNewJournalTitleButton=Neuen Titel erfassen
 plugin_dashboard_delivery_deliverNewJournalTitleHeader=Neuen Titel erfassen
-plugin_dashboard_delivery_deliverShowData=Hier können die erfassten Nutzerdaten eingesehen und bearbeitet werden.
+plugin_dashboard_delivery_deliverShowData=Hier kÃ¶nnen die erfassten Nutzerdaten eingesehen und bearbeitet werden.
 plugin_dashboard_delivery_deliverShowDataButton=Daten bearbeiten
 plugin_dashboard_delivery_deliverShowDataHeader=Eigene Daten bearbeiten
 plugin_dashboard_delivery_deliverShowExistingData=Auflistung bisheriger Datenlieferungen
@@ -109,7 +109,7 @@ plugin_rest_usercreation_ariaLabel_helpModal=In diesem Modal werden Hilfetexte a
 plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
 plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
 plugin_rest_usercreation_back=Zur\u00FCck
-plugin_rest_usercreation_backToLogin=Zurück zum Login
+plugin_rest_usercreation_backToLogin=ZurÃ¼ck zum Login
 plugin_rest_usercreation_createInstitution=Absenden
 plugin_dashboard_delivery_uploadFormSend=Absenden
 plugin_rest_usercreation_goToHelpPages=Zu den Hilfeseiten wechseln
@@ -132,8 +132,8 @@ plugin_rest_usercreation_new_account_activation=Hiermit beantrage ich die Freisc
 plugin_rest_usercreation_new_account_activationNotSet=Die Checkbox zur Freischaltung wurde nicht aktiviert.
 plugin_rest_usercreation_new_account_askForActivation=Antrag auf Freischaltung
 plugin_rest_usercreation_new_account_confirmEmail=Sie haben sich erfolgreich registriert. Bitte wechseln Sie nun in Ihr E-Mail Postfach und best\u00E4tigen Sie ihre E-Mail Adresse </br></br> Danach werden Sie aufgefordert, Ihre Daten zu vervollst\u00E4ndigen.
-plugin_rest_usercreation_new_account_confirmPasswordWrong=Die Passw\u00F6rter stimmen nicht überein.
-plugin_rest_usercreation_new_account_confirmPasswordRight=Die Passw\u00F6rter stimmen überein.
+plugin_rest_usercreation_new_account_confirmPasswordWrong=Die Passw\u00F6rter stimmen nicht Ã¼berein.
+plugin_rest_usercreation_new_account_confirmPasswordRight=Die Passw\u00F6rter stimmen Ã¼berein.
 plugin_rest_usercreation_new_account_confirmPrivacyStatement=Ich habe die <a data-bs-toggle="modal" data-bs-target="#privacyModal" class="btn-primary">Datenschutzerkl\u00E4rung</a> gelesen und akzeptiere diese.
 plugin_rest_usercreation_new_account_createAccount=Account erstellen
 plugin_rest_usercreation_new_account_creationSuccessful=Der Account wurde erfolgreich angelegt. Die ZLB wird die Angaben \u00FCberpr\u00FCfen und ihn dann freischalten. Dar\u00FCber wird per Mail informiert. Anschliessend kann der Account verwendet werden.
@@ -291,7 +291,7 @@ plugin_dashboard_delivery_existingData_contact_helpBody1=Hilfetext \u00DCber dem
 plugin_dashboard_delivery_existingData_helpBody2=Hilfetext unter dem Bild
 plugin_dashboard_delivery_existingData_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
 
-plugin_workflow_processinspection_executeChance=Änderungen ausführen
+plugin_workflow_processinspection_executeChance=Ã„nderungen ausfÃ¼hren
 plugin_workflow_processinspection_searchterm=Suchbegriff
 intranda_workflow_processinspection=Pr\u00FCf-Ansicht
 plugin_workflow_processinspection_image=Vorschau
@@ -316,6 +316,6 @@ plugin_dashboard_delivery_deliverLogout=Hier k\u00F6nnen Sie sich abmelden
 plugin_dashboard_delivery_deliverLogoutButton=Abmelden
 plugin_dashboard_delivery_contactPerson=Kontaktperson
 
-plugin_dashboard_delivery_deliverNoJournalTitles=Diese Funktionalit\u00E4t steht erst zur Verf\u00FCgung, wenn mindestens ein Titel erfasst wurde.
+plugin_dashboard_delivery_deliverNoJournalTitles=Diese Funktionalit\u00E4t steht erst zur Verf\u00FCgung, wenn mindestens ein Titel erfasst und freigeschaltet wurde.
 plugin_dashboard_delivery_backToDashboard=Zur\u00FCck zum Dashboard
 plugin_dashboard_delivery_creationSuccessful=Die Datenlieferung war erfolgreich.
