„plugin/messages_de.properties“ ändern

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -85,7 +85,7 @@ plugin_dashboard_delivery_deliverNewJournalIssueHeader=Ausgabe hinzuf\u00FCgen
 plugin_dashboard_delivery_deliverNewJournalTitle=Hier kann ein neuer Zeitschriftentitel erfasst werden. Der Titel muss angelegt werden, bevor einzelne Jahrg\u00E4nge oder Hefte importiert werden können.
 plugin_dashboard_delivery_deliverNewJournalTitleButton=Neuen Titel erfassen
 plugin_dashboard_delivery_deliverNewJournalTitleHeader=Neuen Titel erfassen
-plugin_dashboard_delivery_deliverShowData=Hier können die erfassten Nutzerdaten eingesehen und bearbeitet werden.
+plugin_dashboard_delivery_deliverShowData=Hier k\u00F6nnen die erfassten Nutzerdaten eingesehen und bearbeitet werden.
 plugin_dashboard_delivery_deliverShowDataButton=Daten bearbeiten
 plugin_dashboard_delivery_deliverShowDataHeader=Eigene Daten bearbeiten
 plugin_dashboard_delivery_deliverShowExistingData=Auflistung bisheriger Datenlieferungen
