Add a message key for empty values; refs #22594

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -20,6 +20,7 @@ plugin_administration_deliveryManagement_displayMode_zdbTitleData=ZDB Titeldaten
 plugin_administration_deliveryManagement_includeFinishedZdbData=Registrierte ZDB Titeldaten anzeigen
 plugin_administration_deliveryManagement_backToList=Zur\u00FCck zur \u00DCbersicht
 plugin_administration_deliveryManagement_details=Details
+plugin_administration_deliveryManagement_overview_emptyVal=Keine Angabe
 process_grid_Abstract=Zusammenfassung
 process_grid_AccessLicense=Zugriffsberechtigung
 process_grid_ActionNote=Maßname
