messages: streamline wording

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -110,7 +110,7 @@ plugin_rest_usercreation_ariaLabel_helpModal=In diesem Modal werden Hilfetexte a
 plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
 plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
 plugin_rest_usercreation_back=Zur\u00FCck
-plugin_rest_usercreation_backToLogin=Zur\u00FCck zum Login
+plugin_rest_usercreation_backToLogin=Zur\u00FCck zur Anmeldung
 plugin_rest_usercreation_createInstitution=Absenden
 plugin_dashboard_delivery_uploadFormSend=Absenden
 plugin_rest_usercreation_goToHelpPages=Zu den Hilfeseiten wechseln
@@ -210,7 +210,7 @@ plugin_rest_usercreation_new_account_confirm_helpBody2=Text unterhalb des Bildes
 
 plugin_dashboard_delivery_noFileUploaded=Um fortzufahren, muss mindestens ein Dokument hochgeladen werden.
 
-plugin_rest_usercreation_login_heading=Login
+plugin_rest_usercreation_login_heading=Anmelden
 plugin_rest_usercreation_pwReset_heading=Passwort zur\u00FCcksetzen
 plugin_rest_usercreation_pwReset_label=Nutzername oder E-Mail-Adresse
 plugin_rest_usercreation_pwReset_message=Nach Absenden des Formulars wird ein neues Passwort an die von Ihnen hinterlegte E-Mail-Adresse gesendet.
